--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ kotlin.daemon.jvmargs=-Xmx3072M
 org.gradle.jvmargs=-Xmx3072M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
+
+#Build options
+# Possible values: jar, linux
+buildTarget=linux
